Refactor tool data access behind provider interfaces.
This separates runtime data-source implementations from tool logic, adds provider selection tests, and updates packaging discovery so data source subpackages are included cleanly.

Made-with: Cursor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,5 @@ dev = [
 asyncio_mode = "auto"
 testpaths = ["tests"]
 
-[tool.setuptools]
-packages = ["app"]
+[tool.setuptools.packages.find]
+include = ["app*"]
