--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "langgraph>=0.6.0",
   "pydantic>=2.11.0",
   "pydantic-settings>=2.10.0",
+  "streamlit>=1.49.0",
   "uvicorn>=0.35.0"
 ]
 
